File html conclude, I changed the IDs of the divs to make the script work better

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     </form>
   </div>
 
-  <div class="modal-wrapper ">
+  <div class="modal-wrapper hide ">
     <div class="modal screen1">
-      <h2>Seu IMC e de 28</h2>
+      <h2 id="imc-result"></h2>
 
       <button>
         <div class="close">
